logs/MCDR.log
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 语言已设置为 zh_cn
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 编码 / 解码方式已设置为 utf-8 / UTF-8
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 插件文件夹列表:
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: - plugins
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 解析处理器已设置为 vanilla_handler
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 刷新所有插件中
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/WARNING]: Plugin ID of RegularPlugin[file=test.py,path=plugins/test.py,state=0] not found, use fallback id test instead
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/WARNING]: RegularPlugin[file=test.py,path=plugins/test.py,state=0] doesn't specific a version, use fallback version 0.0.0
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 插件 test@0.0.0 已加载
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 插件 here@1.0.0 已加载
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 插件 quick_backup_multi@1.1.3 已加载
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/WARNING]: Plugin ID of RegularPlugin[file=youhua.py,path=plugins/youhua.py,state=0] not found, use fallback id youhua instead
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/WARNING]: RegularPlugin[file=youhua.py,path=plugins/youhua.py,state=0] doesn't specific a version, use fallback version 0.0.0
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 插件 youhua@0.0.0 已加载
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 插件 sample_plugin@1.0.0 已加载
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/ERROR]: 插件 RegularPlugin[file=jisuan.py,path=plugins/jisuan.py,state=0] 加载失败
Traceback (most recent call last):
  File "/home/zhenai/mc-server/mcdreforged/plugin/plugin_manager.py", line 170, in __load_plugin
    plugin.load()
  File "/home/zhenai/mc-server/mcdreforged/plugin/regular_plugin.py", line 87, in load
    self.__load_instance()
  File "/home/zhenai/mc-server/mcdreforged/plugin/regular_plugin.py", line 67, in __load_instance
    self.module_instance = misc_util.load_source(self.file_path)
  File "/home/zhenai/mc-server/mcdreforged/utils/misc_util.py", line 31, in load_source
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "plugins/jisuan.py", line 7
    "id"： "simple_calculator"，
        ^
SyntaxError: invalid character in identifier
[MCDR] [2021-06-22 22:16:22] [TaskExecutor/INFO]: 共加载: §75§r 个插件; 加载失败: §71§r 个插件; 已加载插件数: §76§r
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 正在启动服务端，启动参数为 "java -jar fabric-server-launch.jar nogui"
[MCDR] [2021-06-22 22:16:22] [MainThread/INFO]: 服务端正在以 PID 26981 运行中
[MCDR] [2021-06-22 22:16:23] [CheckUpdate/INFO]: MCDR 已为最新版
